GHA init AI2